<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">OR</string>
    <string name="welcome">Welcome to</string>
    <string name="continue_">CONTINUE</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="add_shoe">Add shoe</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_shoe_company_name">Enter shoe company name</string>
    <string name="enter_s_hoe_size">Enter shoe size</string>
    <string name="enter_shoe_description">Enter shoe description</string>
</resources>